--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -24,88 +24,109 @@
     </script>
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="pages/docs/style.css"><link rel="stylesheet" href="pages/blog/style.css"><link rel="stylesheet" href="pages/blog/styles/post.css"><link rel="stylesheet" href="pages/privacy/style.css"><link rel="stylesheet" href="pages/about/style.css"><link rel="stylesheet" href="pages/contact/style.css"><link rel="stylesheet" href="pages/terms/style.css"><link rel="stylesheet" href="../docs/style.css"><link rel="stylesheet" href="../blog/style.css"><link rel="stylesheet" href="../blog/styles/post.css"><link rel="stylesheet" href="../privacy/style.css"><link rel="stylesheet" href="../about/style.css"><link rel="stylesheet" href="../terms/style.css"></head>
-<body class="font-body text-slate-50 bg-main antialiased selection:bg-brand-500/30 selection:text-brand-200 overflow-x-hidden">
+<link rel="stylesheet" href="../docs/style.css"><link rel="stylesheet" href="../blog/style.css"><link rel="stylesheet" href="../blog/styles/post.css"><link rel="stylesheet" href="../privacy/style.css"><link rel="stylesheet" href="../about/style.css"><link rel="stylesheet" href="../terms/style.css"></head>
+<body class="font-body text-slate-900 bg-main antialiased selection:bg-brand-500/30 selection:text-brand-700 overflow-x-hidden">
 
     <!-- Header -->
-    <header class="fixed w-full top-0 z-50 transition-all duration-300 border-b border-white/10 bg-[#050505]/95 backdrop-blur-md">
+    <header class="fixed w-full top-0 z-50 transition-all duration-300 border-b border-gray-200 bg-white/90 backdrop-blur-md">
         <div class="mx-auto max-w-7xl px-6">
             <div class="flex items-center justify-between h-20">
-                <a href="../../index.html" class="flex items-center gap-3 group">
-                    <img src="../../assets/icon/webidesqaureicon.jpg" alt="Web IDE" class="w-10 h-10 rounded-xl border border-white/10 shadow-lg">
-                    <span class="text-xl font-heading font-bold text-white">Web IDE</span>
+                <a href="../../index.html" class="flex items-center gap-3 group relative z-50">
+                    <img src="../../assets/icon/webidesqaureicon.jpg" alt="Web IDE" class="w-10 h-10 rounded-xl border border-gray-200 shadow-sm group-hover:scale-105 transition duration-300">
+                    <span class="text-xl font-heading font-bold text-slate-900">Web IDE</span>
                 </a>
-                <nav class="hidden md:flex items-center gap-6">
-                    <a href="../../index.html" class="text-sm font-medium text-white/60 hover:text-white transition">Home</a>
-                    <a href="../blog/index.html" class="text-sm font-medium text-white/60 hover:text-white transition">Blog</a>
-                    <a href="../docs/index.html" class="text-sm font-medium text-white/60 hover:text-white transition">Docs</a>
-                    <a href="#" class="text-sm font-medium text-white bg-white/10 px-4 py-2 rounded-full transition">Contact</a>
+                
+                <nav class="hidden md:flex items-center gap-8">
+                    <a href="../../index.html" class="text-sm font-medium text-slate-600 hover:text-brand-600 transition">Home</a>
+                    <a href="../blog/index.html" class="text-sm font-medium text-slate-600 hover:text-brand-600 transition">Blog</a>
+                    <a href="../docs/index.html" class="text-sm font-medium text-slate-600 hover:text-brand-600 transition">Docs</a>
+                    <a href="#" class="text-sm font-medium text-brand-600 bg-brand-50 px-4 py-2 rounded-full transition">Contact</a>
                 </nav>
+
+                <!-- Mobile Toggle -->
+                <button id="mobileMenuToggle" class="md:hidden p-2 text-slate-600 hover:text-slate-900 transition">
+                     <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
+                </button>
             </div>
         </div>
     </header>
 
+    <!-- Mobile Menu Overlay -->
+    <div id="mobileMenuOverlay" class="fixed inset-0 bg-white/98 z-[60] hidden opacity-0 transition-opacity duration-300">
+        <div class="absolute top-6 right-6">
+            <button id="closeMobileMenuButton" class="p-2 rounded-full bg-gray-100 text-slate-900 hover:bg-gray-200 transition">
+                <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                    <line x1="18" y1="6" x2="6" y2="18"></line>
+                    <line x1="6" y1="6" x2="18" y2="18"></line>
+                </svg>
+            </button>
+        </div>
+        <div class="h-full flex flex-col items-center justify-center gap-8 p-6">
+            <nav class="flex flex-col items-center gap-8 text-3xl font-heading font-bold text-slate-900">
+                <a href="../../index.html" class="hover:text-brand-500 transition transform hover:scale-110" data-menu-link="">Home</a>
+                <a href="../blog/index.html" class="hover:text-brand-500 transition transform hover:scale-110" data-menu-link="">Blog</a>
+                <a href="../docs/index.html" class="hover:text-brand-500 transition transform hover:scale-110" data-menu-link="">Docs</a>
+                <a href="#" class="text-brand-600" data-menu-link="">Contact</a>
+            </nav>
+        </div>
+    </div>
+
     <!-- Content -->
     <section class="pt-24 pb-16 md:pt-32 md:pb-20 px-6 min-h-screen flex flex-col justify-center relative overflow-hidden">
-        <!-- Background Gradients -->
-        <div class="absolute top-0 right-0 w-[500px] h-[500px] bg-brand-500/10 rounded-full blur-[100px] -z-10"></div>
-        <div class="absolute bottom-0 left-0 w-[500px] h-[500px] bg-accent-dark/10 rounded-full blur-[100px] -z-10"></div>
-
         <div class="container mx-auto max-w-lg relative z-10">
             <div class="text-center mb-10">
-                <h1 class="text-4xl md:text-5xl font-heading font-bold mb-4">Get in touch</h1>
-                <p class="text-white/60">Have a question or feedback? We're here to help.</p>
+                <h1 class="text-4xl md:text-5xl font-heading font-bold mb-4 text-slate-900">Get in touch</h1>
+                <p class="text-slate-600">Have a question or feedback? We're here to help.</p>
             </div>
 
-            <form id="contactForm" class="space-y-4 bg-white/5 p-6 md:p-8 rounded-3xl border border-white/10 shadow-2xl backdrop-blur-sm">
+            <form id="contactForm" class="space-y-4 bg-white p-6 md:p-8 rounded-3xl border border-gray-200 shadow-xl">
                 <div>
-                    <label class="block text-sm font-medium text-white/70 mb-2">Name</label>
-                    <input type="text" placeholder="John Doe" class="w-full p-4 rounded-xl bg-black/20 border border-white/10 focus:border-brand-500 focus:bg-white/5 outline-none transition text-white" required="">
+                    <label class="block text-sm font-medium text-slate-700 mb-2">Name</label>
+                    <input type="text" placeholder="John Doe" class="w-full p-4 rounded-xl bg-gray-50 border border-gray-200 focus:border-brand-500 focus:bg-white outline-none transition text-slate-900" required="">
                 </div>
                 <div>
-                    <label class="block text-sm font-medium text-white/70 mb-2">Email</label>
-                    <input type="email" id="email" placeholder="john@example.com" class="w-full p-4 rounded-xl bg-black/20 border border-white/10 focus:border-brand-500 focus:bg-white/5 outline-none transition text-white" required="">
+                    <label class="block text-sm font-medium text-slate-700 mb-2">Email</label>
+                    <input type="email" id="email" placeholder="john@example.com" class="w-full p-4 rounded-xl bg-gray-50 border border-gray-200 focus:border-brand-500 focus:bg-white outline-none transition text-slate-900" required="">
                 </div>
                 <div>
-                    <label class="block text-sm font-medium text-white/70 mb-2">Subject</label>
-                    <input type="text" id="subject" placeholder="How can we help?" class="w-full p-4 rounded-xl bg-black/20 border border-white/10 focus:border-brand-500 focus:bg-white/5 outline-none transition text-white" required="">
+                    <label class="block text-sm font-medium text-slate-700 mb-2">Subject</label>
+                    <input type="text" id="subject" placeholder="How can we help?" class="w-full p-4 rounded-xl bg-gray-50 border border-gray-200 focus:border-brand-500 focus:bg-white outline-none transition text-slate-900" required="">
                 </div>
                 <div>
-                    <label class="block text-sm font-medium text-white/70 mb-2">Message</label>
-                    <textarea id="message" rows="5" placeholder="Tell us more..." class="w-full p-4 rounded-xl bg-black/20 border border-white/10 focus:border-brand-500 focus:bg-white/5 outline-none transition text-white" required=""></textarea>
+                    <label class="block text-sm font-medium text-slate-700 mb-2">Message</label>
+                    <textarea id="message" rows="5" placeholder="Tell us more..." class="w-full p-4 rounded-xl bg-gray-50 border border-gray-200 focus:border-brand-500 focus:bg-white outline-none transition text-slate-900" required=""></textarea>
                 </div>
                 <button type="submit" class="w-full py-4 rounded-xl bg-gradient-to-r from-brand-600 to-brand-500 text-white font-bold shadow-lg hover:shadow-brand-500/25 transition transform hover:-translate-y-1">Send Message</button>
             </form>
 
-            <div class="mt-10 text-center text-sm text-white/40">
-                <p>Or email us directly at <a href="mailto:support@webide.app" class="text-brand-400 hover:underline">chuyongglean@gmail.com</a></p>
+            <div class="mt-10 text-center text-sm text-slate-500">
+                <p>Or email us directly at <a href="mailto:support@webide.app" class="text-brand-600 hover:underline">chuyongglean@gmail.com</a></p>
             </div>
         </div>
     </section>
 
     <!-- Footer -->
-    <footer class="border-t border-white/10 bg-black/40 backdrop-blur-sm pt-16 pb-8">
+    <footer class="border-t border-gray-200 bg-gray-50 pt-16 pb-8">
         <div class="container mx-auto max-w-7xl px-6">
             <div class="flex flex-col items-center text-center mb-12">
                 <a href="../../index.html" class="flex items-center gap-2 mb-4">
-                    <img src="../../assets/icon/webidesqaureicon.jpg" alt="Web IDE" class="w-8 h-8 rounded-lg border border-white/10">
-                    <span class="text-2xl font-heading font-bold text-white">Web IDE</span>
+                    <img src="../../assets/icon/webidesqaureicon.jpg" alt="Web IDE" class="w-8 h-8 rounded-lg border border-gray-200">
+                    <span class="text-2xl font-heading font-bold text-slate-900">Web IDE</span>
                 </a>
-                <div class="flex flex-wrap justify-center items-center gap-6 text-white/60">
-                    <a href="../../index.html" class="hover:text-white transition">Home</a>
-                    <a href="../about/index.html" class="hover:text-white transition">About</a>
-                    <a href="../privacy/index.html" class="hover:text-white transition">Privacy</a>
-                    <a href="../terms/index.html" class="hover:text-white transition">Terms</a>
+                <div class="flex flex-wrap justify-center items-center gap-6 text-slate-600">
+                    <a href="../../index.html" class="hover:text-brand-600 transition">Home</a>
+                    <a href="../about/index.html" class="hover:text-brand-600 transition">About</a>
+                    <a href="../privacy/index.html" class="hover:text-brand-600 transition">Privacy</a>
+                    <a href="../terms/index.html" class="hover:text-brand-600 transition">Terms</a>
                 </div>
             </div>
-            <div class="flex flex-col md:flex-row items-center justify-between pt-8 border-t border-white/10 text-sm text-white/40">
+            <div class="flex flex-col md:flex-row items-center justify-between pt-8 border-t border-gray-200 text-sm text-slate-400">
                 <div>© <span id="year"></span> Web IDE app.</div>
                 <div class="mt-4 md:mt-0">Created with ❤️ by Chuyong Glean.</div>
             </div>
         </div>
     </footer>
     
+    <script src="../../script.js"></script>
     <script src="script.js"></script>
-
-
-          <script src="pages/docs/script.js"></script><script src="pages/blog/script.js"></script><script src="pages/blog/actions/interactions.js"></script><script src="pages/about/script.js"></script><script src="pages/contact/script.js"></script><script src="../../script.js"></script><script src="../docs/script.js"></script><script src="../blog/script.js"></script><script src="../blog/actions/interactions.js"></script><script src="../about/script.js"></script></body></html>
+<script src="../docs/script.js"></script><script src="../blog/script.js"></script><script src="../blog/actions/interactions.js"></script><script src="../about/script.js"></script></body></html>
